tcosconfig (0.3~rc8) unstable; urgency=low

  * TcosGui.py
    - Fix typo

 -- Ignacio Vidal <vidal_joshur@gva.es>  Wed, 04 Jun 2008 15:13:51 +0200

tcosconfig (0.3~rc7) unstable; urgency=low

  * ConfigReader.py shared.py TcosGui.py
    - Allow from generic /etc/tcos/secrets/tcosmonitor-secrets user and passwd

 -- Ignacio Vidal <vidal_joshur@gva.es>  Mon, 02 Jun 2008 15:10:13 +0200

tcosconfig (0.3~rc6) unstable; urgency=low

  * Change translation model (obtained from private/tcosmonitor)
  * Add translation pt_BR:
    (thanks Maria del Mar Alejo Campos (mymalejo) and Luis Méndez Alejo (gnumax))
  * Update Debian unstable kernel to 2.6.25-2-486

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 25 May 2008 16:38:26 +0200

tcosconfig (0.3~rc5) unstable; urgency=low

  * Add TCOS_ENABLE_SSL checkbox and update translations

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 11 May 2008 12:07:30 +0200

tcosconfig (0.3~rc4) unstable; urgency=low

  [ Mario Izquierdo (mariodebian) ]
  * Add TCOS_XORG_VIDEO_DRIVER and TCOS_XORG_VIDEO_RES to Xorg expander
  * Add some default settings in shared.py
  * Update translations
  * Revert changes in cancel and don't do nothing in finish button
  * Fail if no running as root
  * Update translations
  * Add TCOS_NETBOOT_HIDE_LOCAL to boot menu options
  * shared.py TcosGui.py ConfigReader.py
    - Fix changedvars creation (only do in loadsettings)
    - Fix netboot menu vars save
  * Update translations

  [ Ignacio Vidal ]
  * ConfigReader.py
    - Add support in case group tcos exist
  * TcosGui.py tcosconfig.glade shared.py
    - Add TCOS_XORG_DRI, TCOS_XORG_DRI_RADEON and TCOS_XORG_DRIVER_OPENCHROME
    - In case blank password, that is set to root, send a message to know
    - Force use custom tcos template by default 

 -- Ignacio Vidal <vidal_joshur@gva.es>  Thu, 08 May 2008 12:28:20 +0200

tcosconfig (0.3~rc3) unstable; urgency=low

  * ConfigReader.py TcosGui.py: