@@ -251,9 +251,6 @@ class ConfigReader:
             f.write( "%s=%s\n" %(key, self.confdata[key] )  )
             print_debug("savedata() %s=%s " %(key, self.confdata[key] ) )
         
-        if self.use_secrets:
-            f.write( "TCOS_ADMIN_USER=%s\n" %(self.vars_secrets[0][0])  )
-            f.write( "TCOS_ROOT_PASSWD=%s\n" %(self.vars_secrets[0][1])  )
         f.write("\n#end of template\n")
         f.close()
         gidtcos=-1
